# py-api-ddd

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/application/usecases/: create_transaction.py  create_transaction_usecase.py
app/domain/contracts/: usecase.py
app/domain/entities/: _base.py  account.py  balance.py  balances.py  mcc_category.py  merchant_mapping.py  transaction.py
app/domain/repositories/: balance_repository.py  mcc_category_repository.py  merchant_mapping_repository.py
app/domain/respositories/: account_repository.py  balance_repository.py  mcc_category_repository.py  transaction_repository.py
app/infrastructure/database/: init_db.py  mappers.py  models.py  session.py
app/infrastructure/database/repositories/: sqlalchemy_account_repository.py  sqlalchemy_balance_repository.py  sqlalchemy_mcc_category_repository.py  sqlalchemy_merchant_mapping_repository.py  sqlalchemy_transaction_repository.py
app/main/: main.py
app/modules/users/dtos/: create_user_dto.py  sign_in_dto.py  sign_up_dto.py
app/presentation/factories/: transaction_factory.py
app/presentation/fastapi/configs/: app_factory.py  config.py
app/presentation/fastapi/routes/: __init__.py  example_routes.py  transaction_routes.py
app/shared/contracts/: dto.py  usecase.py
